Add view reservation details

--- a/src/app/pages/reservation/reservation-confirmation/reservation-confirmation.page.html
+++ b/src/app/pages/reservation/reservation-confirmation/reservation-confirmation.page.html
@@ -107,6 +107,6 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-button expand="block" (click)="confirmReservation()">Confirm Reservation</ion-button>
+    <ion-button expand="block" color="success" (click)="confirmReservation()">Confirm Reservation</ion-button>
   </ion-toolbar>
 </ion-footer>
