--- a/src/app/pages/menu/menu-create/menu-create.page.html
+++ b/src/app/pages/menu/menu-create/menu-create.page.html
@@ -26,9 +26,10 @@
     <ion-grid>
       <ion-row>
         <ion-col size="4" class="ion-padding-start ion-padding-end">
-          <ion-thumbnail>
-            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+          <ion-thumbnail (click)="selectImage()">
+            <img alt="Silhouette of mountains" [src]="image ? image : 'https://ionicframework.com/docs/img/demos/thumbnail.svg'" />
           </ion-thumbnail>
+          <input type="file" accept="image/jpeg,image/jpeg,image/png" #imagePicker placeholder="Image" (change)="pickImageFile($event)">
         </ion-col>
 
         <ion-col size="8" class="ion-padding-end">
