--- a/src/app/pages/qr/qr-scan/qr-scan.page.html
+++ b/src/app/pages/qr/qr-scan/qr-scan.page.html
@@ -1,13 +1,68 @@
 <ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-title>qr-scan</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>QR Scanner</ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">qr-scan</ion-title>
+      <ion-title size="large">QR Code Scanner</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <!-- Shows our camera stream -->
+  <video #video [hidden]="!scanActive" width="100%" height="100%"></video>
+
+  <!-- Used to render the camera stream images -->
+  <canvas #canvas hidden></canvas>
+
+  <ion-card *ngIf="scanResult">
+    <ion-card-header>
+      <ion-card-title>QR Code</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      {{ scanResult }}
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+
+    <!-- Fallback for iOS PWA -->
+    <input #fileinput type="file" accept="image/*;capture=camera" hidden (change)="handleFile($event)">
+
+    <!-- Trigger the file input -->
+    <ion-button expand="full" (click)="captureImage()">
+      <ion-icon slot="start" name="camera"></ion-icon>
+      Capture Image
+    </ion-button>
+
+    <ion-button expand="full" (click)="startScan()" *ngIf="!scanActive">
+      <ion-icon slot="start" name="qr-scanner"></ion-icon>
+      Start scan
+    </ion-button>
+
+    <ion-button expand="full" (click)="reset()" color="warning" *ngIf="!scanActive && scanResult">
+      <ion-icon slot="start" name="refresh"></ion-icon>
+      Reset
+    </ion-button>
+
+    <!-- Stop our scanner preview if active -->
+    <ion-button expand="full" (click)="stopScan()" color="danger" *ngIf="scanActive">
+      <ion-icon slot="start" name="close"></ion-icon>
+      Stop scan
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
